--- a/css/PagPrincipal.css
+++ b/css/PagPrincipal.css
@@ -196,12 +196,13 @@ footer{
     width: 100%;
 }
 
-.establecimiento button{
+button{
     border: none;
     background-color: #7EA4EB;
     color: #FFFFFF;
     border-radius: 0.5rem;
     padding: 0.5rem 0.8rem;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .establecimiento h2{
@@ -246,7 +247,9 @@ footer{
 }
 
 #calificacion {
-    width: 40%;
+    display: flex;
+    width: 25%;
+    justify-content: center;
     img {
         width: 1.2rem;
         height: 1.2rem;
@@ -258,7 +261,7 @@ footer{
     display: flex;
     justify-content: space-between;
     div{
-        width: 60%;
+        width: 85%;
     }
 }
 
@@ -303,6 +306,52 @@ footer{
     overflow: auto;
 }
 
+#cerrar{
+    height: 2rem;
+    width: 2rem;
+    color: #e6e5e5;
+    background-color: #7EA4EB;
+    border: none;
+    padding: 0.3rem 0.55rem;
+    border-radius: 1rem;
+    text-align: center;
+    vertical-align: middle;
+    font-weight: 600;
+}
+
+dialog{
+    width: 100%;
+    padding: 1.5rem;
+    border: none;
+    border-top: #7EA4EB solid 0.5rem;
+    font-family: Verdana;
+    margin: auto 0;
+    h2, h3{
+        margin: 0 0 1rem;
+        font-weight: 200;
+    }
+    textarea{
+        max-width: 98%;
+        width: 98%;
+        max-height: 5rem;
+        border: #999 0.1rem solid;
+        border-radius: 0.5rem;
+        margin-bottom: 1rem;
+    }
+    label{
+        margin-bottom: 1rem;
+    }
+    input{
+        margin-bottom: 1rem;
+    }
+}
+.estrellas{
+    margin-bottom: 1rem;
+    img{
+        width: 1.6rem;
+    }
+}
+
 @media screen and (min-width: 700px){
     html{
         font-size: 14px;
@@ -312,5 +361,10 @@ footer{
     }
     .places-list{
         width: 35%;
+    }
+    dialog{
+        width: 70%;
+        border-radius: 0.2rem 0.2rem 1rem 1rem;
+        margin: auto;
     }
 }
