--- a/css/PagPrincipal.css
+++ b/css/PagPrincipal.css
@@ -363,7 +363,7 @@ dialog{
         width: 35%;
     }
     dialog{
-        width: 70%;
+        width: 30rem;
         border-radius: 0.2rem 0.2rem 1rem 1rem;
         margin: auto;
     }
